--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,16 +20,36 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Run a sample script
-        run: |
-          echo "This is an experiment"
-          echo "Running on $(uname -a)"
-      # - uses: google-github-actions/auth@v2
-      #   with:
-      #     credentials_json: '${{ secrets.GKE_SA_KEY }}'
+      - uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GKE_SA_KEY }}'
 
-      # - name: 'Set up Cloud SDK'
-      #   uses: google-github-actions/setup-gcloud@v2
+      - name: 'Set up Cloud SDK'
+        uses: google-github-actions/setup-gcloud@v2
 
-      # - name: 'Use gcloud CLI'
-      #   run: gcloud info
+      - name: 'Use gcloud CLI'
+        run: gcloud info
+
+      
+      - name: 'Get GKE credentials'
+        uses: 'google-github-actions/get-gke-credentials@v2'
+        with:
+          cluster_name: '${{ env.GKE_CLUSTER }}'
+          project_id: '${{ env.PROJECT_ID }}'
+          location: '${{ env.GKE_ZONE }}'
+
+      - name: Build
+        run: docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA" ./example/part3.2/
+
+      - name: Publish
+        run: docker push "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA"
+
+      - name: Set up Kustomize
+        uses: imranismail/setup-kustomize@v2.1.0
+
+      - name: Deploy
+        run: |-
+          kustomize edit set image PROJECT/IMAGE=gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA
+          kustomize build . | kubectl apply -f -
+          kubectl rollout status deployment $SERVICE
+          kubectl get services -o wide
