--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,8 +7,6 @@ env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GKE_CLUSTER: dwk-cluster
   GKE_ZONE: europe-north1-b
-  IMAGE: dwk-environments
-  SERVICE: dwk-environments
   BRANCH: ${{ github.ref_name }}
 
 jobs:
@@ -19,7 +17,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+      
       - uses: google-github-actions/auth@v2
         with:
           credentials_json: '${{ secrets.GKE_SA_KEY }}'
@@ -36,26 +34,36 @@ jobs:
           cluster_name: '${{ env.GKE_CLUSTER }}'
           project_id: '${{ env.PROJECT_ID }}'
           location: '${{ env.GKE_ZONE }}'
-
-      - run: gcloud --quiet auth configure-docker
-
-      - name: Build
+      
+      - name: 'Configure docker and set tags'
         run: |-
-          IMAGE_TAG="gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA"
-          echo "Constructed Image Tag: $IMAGE_TAG"
-          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA" ./example/part3.2/
+          gcloud --quiet auth configure-docker
+          echo "IMAGE_RELEASE=${BRANCH}-${GITHUB_SHA}" >> $GITHUB_ENV
+          echo "TODO_APP_IMAGE_TAG="gcr.io/$PROJECT_ID/todo-app:$IMAGE_RELEASE" >> $GITHUB_ENV
+          echo "TODO_BACKEND_IMAGE_TAG="gcr.io/$PROJECT_ID/todo-backend:$IMAGE_RELEASE" >> $GITHUB_ENV
+          echo "TODO_CRON_IMAGE_TAG="gcr.io/$PROJECT_ID/todo-cron:$IMAGE_RELEASE" >> $GITHUB_ENV
 
-      - name: Publish
-        run: |- 
-          gcloud info
-          docker push "gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA"
+      - name: Build TODO images
+        run: |-
+          docker build --tag $TODO_APP_IMAGE_TAG ./3/3.3/todo-app/
+          docker build --tag $TODO_BACKEND_IMAGE_TAG ./3/3.3/todo-backend/
+          docker build --tag $TODO_CRON_IMAGE_TAG ./3/3.3/cronjob/
+
+      - name: Publish TODO images
+        run: |-
+          docker push $TODO_APP_IMAGE_TAG
+          docker push $TODO_BACKEND_IMAGE_TAG
+          docker push $TODO_CRON_IMAGE_TAG
 
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2.1.0
 
       - name: Deploy
         run: |-
-          kustomize edit set image PROJECT/IMAGE=gcr.io/$PROJECT_ID/$IMAGE:$BRANCH-$GITHUB_SHA
+          kustomize edit set image PROJECT/TODO-APP-IMAGE=$TODO_APP_IMAGE_TAG
+          kustomize edit set image PROJECT/TODO-BACKEND-IMAGE=$TODO_BACKEND_IMAGE_TAG
+          kustomize edit set image PROJECT/TODO-CRON-IMAGE=$TODO_CRON_IMAGE_TAG
+
           kustomize build . | kubectl apply -f -
           kubectl rollout status deployment $SERVICE
           kubectl get services -o wide
