--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,8 +1,17 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - example/part3.2/manifest/deployment.yaml
-  - example/part3.2/manifest/service.yaml
+  - 3/3.3/manifest/namespace.yaml
+  - 3/3.3/manifest/configMap.yaml
+  - 3/3.3/manifest/secret.yaml
+  - 3/3.3/manifest/statefulSet.yaml
+  - 3/3.3/manifest/deployment.yaml
+  - 3/3.3/manifest/service.yaml
+  - 3/3.3/manifest/cronjob.yaml
 images:
-  - name: PROJECT/IMAGE
-    newName: jakousa/colorcontent
+  - name: PROJECT/TODO-APP-IMAGE
+    newName: duchong/todo-app:2.2
+  - name: PROJECT/TODO-BACKEND-IMAGE
+    newName: duchong/todo-backend:2.10
+  - name: PROJECT/TODO-CRON-IMAGE
+    newName: duchong/cronjob:2.9
