--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,9 +39,9 @@ jobs:
         run: |-
           gcloud --quiet auth configure-docker
           echo "IMAGE_RELEASE=${BRANCH}-${GITHUB_SHA}" >> $GITHUB_ENV
-          echo "TODO_APP_IMAGE_TAG="gcr.io/$PROJECT_ID/todo-app:$IMAGE_RELEASE" >> $GITHUB_ENV
-          echo "TODO_BACKEND_IMAGE_TAG="gcr.io/$PROJECT_ID/todo-backend:$IMAGE_RELEASE" >> $GITHUB_ENV
-          echo "TODO_CRON_IMAGE_TAG="gcr.io/$PROJECT_ID/todo-cron:$IMAGE_RELEASE" >> $GITHUB_ENV
+          echo "TODO_APP_IMAGE_TAG=gcr.io/$PROJECT_ID/todo-app:$IMAGE_RELEASE" >> $GITHUB_ENV
+          echo "TODO_BACKEND_IMAGE_TAG=gcr.io/$PROJECT_ID/todo-backend:$IMAGE_RELEASE" >> $GITHUB_ENV
+          echo "TODO_CRON_IMAGE_TAG=gcr.io/$PROJECT_ID/todo-cron:$IMAGE_RELEASE" >> $GITHUB_ENV
 
       - name: Build TODO images
         run: |-
