fix env settings

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,7 +38,8 @@ jobs:
       - name: 'Configure docker and set tags'
         run: |-
           gcloud --quiet auth configure-docker
-          echo "IMAGE_RELEASE=${BRANCH}-${GITHUB_SHA}" >> $GITHUB_ENV
+          export IMAGE_RELEASE=${BRANCH}-${GITHUB_SHA}
+          echo "IMAGE_RELEASE=$IMAGE_RELEASE" >> $GITHUB_ENV
           echo "TODO_APP_IMAGE_TAG=gcr.io/$PROJECT_ID/todo-app:$IMAGE_RELEASE" >> $GITHUB_ENV
           echo "TODO_BACKEND_IMAGE_TAG=gcr.io/$PROJECT_ID/todo-backend:$IMAGE_RELEASE" >> $GITHUB_ENV
           echo "TODO_CRON_IMAGE_TAG=gcr.io/$PROJECT_ID/todo-cron:$IMAGE_RELEASE" >> $GITHUB_ENV
