--- a/3/3.3/manifest/service.yaml
+++ b/3/3.3/manifest/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: todo-app-svc
   namespace: project
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: todo-app
   ports:
