--- a/3/3.4/workflows/main.yaml
+++ b/3/3.4/workflows/main.yaml
@@ -46,9 +46,9 @@ jobs:
 
       - name: Build TODO images
         run: |-
-          docker build --tag $TODO_APP_IMAGE_TAG ./3/3.3/todo-app/
-          docker build --tag $TODO_BACKEND_IMAGE_TAG ./3/3.3/todo-backend/
-          docker build --tag $TODO_CRON_IMAGE_TAG ./3/3.3/cronjob/
+          docker build --tag $TODO_APP_IMAGE_TAG ./3/3.4/todo-app/
+          docker build --tag $TODO_BACKEND_IMAGE_TAG ./3/3.4/todo-backend/
+          docker build --tag $TODO_CRON_IMAGE_TAG ./3/3.4/cronjob/
 
       - name: Publish TODO images
         run: |-
@@ -61,7 +61,11 @@ jobs:
 
       - name: Deploy
         run: |-
+          kubectl create namespace ${GITHUB_REF#refs/heads/} || true
+          kubectl config set-context --current --namespace=${GITHUB_REF#refs/heads/}
           kustomize edit set image PROJECT/TODO-APP-IMAGE=$TODO_APP_IMAGE_TAG
+          kustomize edit set namespace ${GITHUB_REF#refs/heads/}
+
           kustomize edit set image PROJECT/TODO-BACKEND-IMAGE=$TODO_BACKEND_IMAGE_TAG
           kustomize edit set image PROJECT/TODO-CRON-IMAGE=$TODO_CRON_IMAGE_TAG
 
