--- a/.github/workflows/delete-branch.yaml
+++ b/.github/workflows/delete-branch.yaml
@@ -40,9 +40,9 @@ jobs:
 
       - name: Clean up
         run: |-
-          echo "cleaning up branch $GITHUB_REF"
-          kubectl config set-context --current --namespace=${GITHUB_REF#refs/heads/}
-          kustomize edit set namespace ${GITHUB_REF#refs/heads/}
+          echo "cleaning up branch ${{ github.event.ref }}"
+          kubectl config set-context --current --namespace=${{ github.event.ref#refs/heads/ }}
+          kustomize edit set namespace ${{ github.event.ref#refs/heads/ }}
           kubectl delete -k .
           kubectl rollout status deployment $SERVICE
           kubectl get services -o wide
