--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,18 +1,19 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - 3/3.4/manifest/namespace.yaml
-  - 3/3.4/manifest/configMap.yaml
-  - 3/3.4/manifest/secret.yaml
-  - 3/3.4/manifest/statefulSet.yaml
-  - 3/3.4/manifest/deployment.yaml
-  - 3/3.4/manifest/service.yaml
-  - 3/3.4/manifest/cronjob.yaml
-  - 3/3.4/manifest/ingress.yaml
+- 3/3.7/manifest/namespace.yaml
+- 3/3.7/manifest/configMap.yaml
+- 3/3.7/manifest/secret.yaml
+- 3/3.7/manifest/statefulSet.yaml
+- 3/3.7/manifest/deployment.yaml
+- 3/3.7/manifest/service.yaml
+- 3/3.7/manifest/cronjob.yaml
+- 3/3.7/manifest/ingress.yaml
 images:
-  - name: PROJECT/TODO-APP-IMAGE
-    newName: duchong/todo-app:3.4
-  - name: PROJECT/TODO-BACKEND-IMAGE
-    newName: duchong/todo-backend:3.41
-  - name: PROJECT/TODO-CRON-IMAGE
-    newName: duchong/cronjob:2.9
+- name: PROJECT/TODO-APP-IMAGE
+  newName: duchong/todo-app:3.4
+- name: PROJECT/TODO-BACKEND-IMAGE
+  newName: duchong/todo-backend:3.41
+- name: PROJECT/TODO-CRON-IMAGE
+  newName: duchong/cronjob:3.73
+namespace: project
