--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- 3/3.7/manifest/namespace.yaml
-- 3/3.7/manifest/configMap.yaml
-- 3/3.7/manifest/secret.yaml
-- 3/3.7/manifest/statefulSet.yaml
-- 3/3.7/manifest/deployment.yaml
-- 3/3.7/manifest/service.yaml
-- 3/3.7/manifest/cronjob.yaml
-- 3/3.7/manifest/ingress.yaml
+- 4/4.5/manifest/namespace.yaml
+- 4/4.5/manifest/configMap.yaml
+- 4/4.5/manifest/secret.yaml
+- 4/4.5/manifest/statefulSet.yaml
+- 4/4.5/manifest/deployment.yaml
+- 4/4.5/manifest/service.yaml
+- 4/4.5/manifest/cronjob.yaml
+- 4/4.5/manifest/ingress.yaml
 images:
 - name: PROJECT/TODO-APP-IMAGE
   newName: duchong/todo-app:3.4
@@ -16,4 +16,7 @@ images:
   newName: duchong/todo-backend:3.41
 - name: PROJECT/TODO-CRON-IMAGE
   newName: duchong/cronjob:3.73
-namespace: project
+- name: PROJECT/PINGPONG-IMAGE
+  newName: duchong/pingpong:3.22
+- name: PROJECT/LOG-OUTPUT-IMAGE
+  newName: duchong/log-output:3.22
