--- a/overlays/prod/kustomization.yaml
+++ b/overlays/prod/kustomization.yaml
@@ -2,17 +2,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
-patches:
-- path: namespace.yaml
+namespace: prod-namespace
 images:
 - name: PROJECT/LOG-OUTPUT-IMAGE
-  newName: duchong/log-output:3.22
+  newName: e
 - name: PROJECT/PINGPONG-IMAGE
-  newName: duchong/pingpong:3.22
+  newName: d
 - name: PROJECT/TODO-APP-IMAGE
-  newName: duchong/todo-app
-  newTag: "3.4"
+  newName: a
 - name: PROJECT/TODO-BACKEND-IMAGE
-  newName: duchong/todo-backend:3.41
+  newName: b
 - name: PROJECT/TODO-CRON-IMAGE
-  newName: duchong/cronjob:3.73
+  newName: c
