--- a/overlays/staging/kustomization.yaml
+++ b/overlays/staging/kustomization.yaml
@@ -2,8 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
-patches:
-- path: namespace.yaml
+namespace: staging-namespace
 images:
 - name: PROJECT/LOG-OUTPUT-IMAGE
   newName: duchong/log-output:3.22
