Fix adding prod file

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -78,5 +78,5 @@ jobs:
       - name: commit kustomization.yaml to GitHub
         uses: EndBug/add-and-commit@v9
         with:
-          add: 'kustomization.yaml'
+          add: 'overlays/prod/kustomization.yaml'
           message: New version released ${{ github.sha }}
