--- a/5/5.2/manifest/deployment.yaml
+++ b/5/5.2/manifest/deployment.yaml
@@ -10,43 +10,43 @@ spec:
       app: todo-app
   template:
     metadata:
+      annotations:
+        linkerd.io/inject: enabled
       labels:
         app: todo-app
     spec:
-
       containers:
-        - name: todo-app
-          image: PROJECT/TODO-APP-IMAGE
-          imagePullPolicy: Always
-          livenessProbe:
-            failureThreshold: 3
-            httpGet:
-              path: /
-              port: 3000
-              scheme: HTTP
-            initialDelaySeconds: 60
-            periodSeconds: 60
-            successThreshold: 1
-            timeoutSeconds: 10
-          readinessProbe:
-            failureThreshold: 3
-            httpGet:
-              path: /
-              port: 3000
-              scheme: HTTP
-            initialDelaySeconds: 60
-            periodSeconds: 60
-            successThreshold: 1
-            timeoutSeconds: 10
-          env:
-          - name: PORT
-            value: "3000"
-          resources:
-            limits:
-              cpu: "150m"
-              memory: "200Mi"
+      - env:
+        - name: PORT
+          value: "3000"
+        image: duchong/todo-app:3.4
+        imagePullPolicy: Always
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /
+            port: 3000
+            scheme: HTTP
+          initialDelaySeconds: 60
+          periodSeconds: 60
+          successThreshold: 1
+          timeoutSeconds: 10
+        name: todo-app
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /
+            port: 3000
+            scheme: HTTP
+          initialDelaySeconds: 60
+          periodSeconds: 60
+          successThreshold: 1
+          timeoutSeconds: 10
+        resources:
+          limits:
+            cpu: 150m
+            memory: 200Mi
 ---
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -59,45 +59,47 @@ spec:
       app: todo-backend
   template:
     metadata:
+      annotations:
+        linkerd.io/inject: enabled
       labels:
         app: todo-backend
     spec:
       containers:
-        - name: todo-backend
-          image: PROJECT/TODO-BACKEND-IMAGE
-          imagePullPolicy: Always
-          livenessProbe:
-            failureThreshold: 3
-            httpGet:
-              path: /
-              port: 3000
-              scheme: HTTP
-            initialDelaySeconds: 60
-            periodSeconds: 60
-            successThreshold: 1
-            timeoutSeconds: 10
-          readinessProbe:
-            failureThreshold: 3
-            httpGet:
-              path: /
-              port: 3000
-              scheme: HTTP
-            initialDelaySeconds: 60
-            periodSeconds: 60
-            successThreshold: 1
-            timeoutSeconds: 10
-          envFrom:
-            - secretRef:
-                name: db-secret
-          env:
-            - name: POSTGRES_SERVICE
-              value: "postgres-svc"
-            - name: POSTGRES_DB
-              valueFrom:
-                configMapKeyRef:
-                  name: my-config
-                  key: database_name
-          resources:
-            limits:
-              cpu: "150m"
-              memory: "200Mi"
+      - env:
+        - name: POSTGRES_SERVICE
+          value: postgres-svc
+        - name: POSTGRES_DB
+          valueFrom:
+            configMapKeyRef:
+              key: database_name
+              name: my-config
+        envFrom:
+        - secretRef:
+            name: db-secret
+        image: duchong/todo-backend:3.41
+        imagePullPolicy: Always
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /
+            port: 3000
+            scheme: HTTP
+          initialDelaySeconds: 60
+          periodSeconds: 60
+          successThreshold: 1
+          timeoutSeconds: 10
+        name: todo-backend
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /
+            port: 3000
+            scheme: HTTP
+          initialDelaySeconds: 60
+          periodSeconds: 60
+          successThreshold: 1
+          timeoutSeconds: 10
+        resources:
+          limits:
+            cpu: 150m
+            memory: 200Mi
