--- a/5/5.7/4.1/manifest/statefulSet.yaml
+++ b/5/5.7/4.1/manifest/statefulSet.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres
-  namespace: project
+  namespace: exp1
 spec:
   serviceName: "postgres"
   replicas: 1
@@ -32,12 +32,12 @@ spec:
           volumeMounts:
             - name: postgres-storage
               mountPath: /var/lib/postgresql/data
+              subPath: postgres
   volumeClaimTemplates:
     - metadata:
         name: postgres-storage
       spec:
         accessModes: ["ReadWriteOnce"]
-        storageClassName: "local-path" # Replace with your storage class if different
         resources:
           requests:
             storage: 1Gi
@@ -46,7 +46,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres-svc
-  namespace: project
+  namespace: exp1
   labels:
     app: postgres
 spec:
